# angular-cookbook

./: .cz-config.js  .gitignore  .gitmodules  CHANGELOG.example.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: mdbook.yml
po/: en.po  fr.po
src/: README.md  SUMMARY.md  angular-version.md  chapter_1.md  contributors.md  dynamic_load.md  how-to-customiz.md  how-to-pull-request.md  lazy_loading.md  lazy_loading_module.md  lazy_loading_service.md  lazy_loading_standalone_component.md
src/angular-elements/: README.md
src/architecture/: README.md
src/awesome-angular/: awesome_angular.md
src/best-reddit-automate-articles/: README.md
src/cli-commands/: README.md
src/composent-without-selectors/: README.md  how-to-create-component-without-selectors.md
src/dependency-injection/: alias-providers.md  factory-providers.md  index.md  injection-via-constructor.md  injectiontoken-usage.md  injector-and-providedIn-root.md  multi-providers.md  parameter-decorators.md  the-inject-method.md  value-providers.md
src/devtools/: README.md
src/extension-vscode/: README.md
src/forms/: README.md  best-libraries-for-angular-forms.md  how-to-create-a-custom-validator-directive.md  how-to-create-a-custom-validator.md  how-to-create-a-group-validators.md  how-to-create-asynchronous-validators.md  validation.md
src/guide/: how-to-contribute.md  installation.md
src/http-client/: README.md
src/i18n/: README.md
theme/: head.hbs  highlight.css  index.hbs  language.js
(+46 files in other folders)
