[package]
name = "angular-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook-admonish = "^1.13.1"
mdbook-i18n-helpers = "^0.2.4"

anyhow = "1.0.68"
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
mdbook = { version = "0.4.25", default-features = false }
polib = "0.2.0"
pulldown-cmark = { version = "0.9.2", default-features = false }
pulldown-cmark-to-cmark = "11.0.0"
regex = "1.9.4"
semver = "1.0.16"
serde_json = "1.0.91"
syntect = "5.1.0"
textwrap = { version = "0.16.0", default-features = false }

[dev-dependencies]
pretty_assertions = "1.3.0"
tempfile = "3.5.0"